--- a/styles/style.css
+++ b/styles/style.css
@@ -214,13 +214,15 @@ footer{
 /*SERVICE SECTION */
 .container-service{
 	width: 100%;
-	height: 100vh;
-	background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url(../src/motiv.jpg);
-	background-position: center;
-	background-size: cover;
+	height: 1vh;
 	padding-right: 8%;
 	padding-left: 8%;
 	box-sizing: border-box;
+}
+.T-section{
+	background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url(../src/motiv.jpg);
+	align-items: center;
+	padding: 15% 17%;
 }
 .serv{
 	justify-content: space-between;
