--- a/styles/style.css
+++ b/styles/style.css
@@ -235,11 +235,19 @@ footer{
 
 .serv-type {
   font-family: fantasy;
-  font-size: 50px;
+  font-size: 4vw;
   color: red;
   margin-bottom: 30px;
 }
-
+@media screen and (max-width: 600px) {
+  .serv-type {
+    font-size: 30px;
+  }
+  .T-section {
+    flex-direction: column;
+    padding: 50px 10px;
+  }
+}
 .serv{
 	justify-content: space-between;
 	box-sizing: border-box;
