--- a/styles/style.css
+++ b/styles/style.css
@@ -38,14 +38,11 @@ footer{
 	padding-right: 20%;
 	box-sizing: border-box;
 }
-.container-registration{
+.container{
 	width: 100%;
-	height: 100vh;
-	background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url(../src/motiv.jpg);
-	background-position: center;
-	background-size: cover;
-	padding-left: 14%;
-	padding-right: 14%;
+	height: 1vh;
+	padding-right: 8%;
+	padding-left: 8%;
 	box-sizing: border-box;
 }
 .nav-bar{
@@ -212,20 +209,14 @@ footer{
 	padding-bottom: 20px;
 }
 /*SERVICE SECTION */
-.container-service{
-	width: 100%;
-	height: 1vh;
-	padding-right: 8%;
-	padding-left: 8%;
-	box-sizing: border-box;
-}
+
 .T-section {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../src/motiv.jpg);
-  padding: 20% 17%;
+  padding: 13% 17%;
 }
 
 .T-title {
@@ -239,15 +230,7 @@ footer{
   color: red;
   margin-bottom: 30px;
 }
-@media screen and (max-width: 600px) {
-  .serv-type {
-    font-size: 30px;
-  }
-  .T-section {
-    flex-direction: column;
-    padding: 25% 5%;
-  }
-}
+
 .serv{
 	justify-content: space-between;
 	box-sizing: border-box;
@@ -264,6 +247,15 @@ footer{
 	margin: 10px;
 	background-position: center;
 	background-size: cover;
+}
+@media screen and (max-width: 600px) {
+  .serv-type {
+    font-size: 30px;
+  }
+  .T-section {
+    flex-direction: column;
+    padding: 25% 5%;
+  }
 }
 .serv h5{
 	margin: 125% 0%;
@@ -457,6 +449,16 @@ footer{
 	text-indent: 2em;
 }
 /*REGISTRATION SECTION*/
+
+.R-section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../src/motiv.jpg);
+  padding: 13% 17%;
+}
+
 .form {
 	border-radius: 10px;
 	align-items: left;
