--- a/styles/style.css
+++ b/styles/style.css
@@ -252,7 +252,7 @@ footer{
   .serv-type {
     font-size: 30px;
   }
-  .T-section {
+  .S-section {
     flex-direction: column;
     padding: 25% 5%;
   }
