--- a/styles/style.css
+++ b/styles/style.css
@@ -458,7 +458,7 @@ footer{
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../src/motiv.jpg);
   padding: 17% 17%;
 }
-@media only screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
   .R-section {
     padding: 25% 5%;
   }
