--- a/styles/style.css
+++ b/styles/style.css
@@ -1,62 +1,10 @@
-*{
-	margin: 0;
-	padding: 0;
-	overflow: ;
-	box-sizing: border-box;
-}
-html {
-	scrollbar-width: none;
-	-ms-overflow-style: none;
-}
-body {
-	background-color: white;
-	overflow-y: scroll;
-}
-h1{
-	text-align: center;
-}
-footer{
-	text-align: center;
-}
-::-webkit-scrollbar {
-	display: none;
-}
-.serv-btn:hover,.serv-btn:focus, .serv-btn:active {
-  outline: none;
-  box-shadow: none;
-  -webkit-tap-highlight-color: transparent;
-}
 
-/*MAIN SECTION*/
-.container-home{
-	width: 100%;
-	height: 100vh;
-	background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url(../src/motiv.jpg);
-	background-position: center;
-	background-size: cover;
-	padding-left: 8%;
-	padding-right: 20%;
-	box-sizing: border-box;
-}
-.container{
-	width: 100%;
-	height: 1vh;
-	padding-right: 8%;
-	padding-left: 8%;
-	box-sizing: border-box;
-}
-.nav-bar{
-	position: absolute;
-	right:-.1px;
-	height: 12%;
-	display: flex;
-	align-items: center;
 	background-color: black;
 	width: 100%;
 }
-@media screen and (max-width: 600px) {
+@media only screen and (max-width: 600px) {
   .nav-bar {
-    height: 2%;
+    height: 8%;
   }
 }
 .logo{
