--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
 	background-color: black;
 	width: 100%;
 }
-@media only screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
   .nav-bar {
     height: 12%;
   }
