--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,60 @@
+*{
+	margin: 0;
+	padding: 0;
+	overflow: ;
+	box-sizing: border-box;
+}
+html {
+	scrollbar-width: none;
+	-ms-overflow-style: none;
+}
+body {
+	background-color: white;
+	overflow-y: scroll;
+}
+h1{
+	text-align: center;
+}
+footer{
+	text-align: center;
+}
+::-webkit-scrollbar {
+	display: none;
+}
+.serv-btn:hover,.serv-btn:focus, .serv-btn:active {
+  outline: none;
+  box-shadow: none;
+  -webkit-tap-highlight-color: transparent;
+}
 
+/*MAIN SECTION*/
+.container-home{
+	width: 100%;
+	height: 100vh;
+	background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url(../src/motiv.jpg);
+	background-position: center;
+	background-size: cover;
+	padding-left: 8%;
+	padding-right: 20%;
+	box-sizing: border-box;
+}
+.container{
+	width: 100%;
+	height: 1vh;
+	padding-right: 8%;
+	padding-left: 8%;
+	box-sizing: border-box;
+}
+.nav-bar{
+	position: absolute;
+	right:-.1px;
+	height: 12%;
+	display: flex;
+	align-items: center;
 	background-color: black;
 	width: 100%;
 }
+
 .logo{
 	width: 200px;
 	cursor: pointer;
@@ -195,6 +248,15 @@ footer{
 	margin: 10px;
 	background-position: center;
 	background-size: cover;
+}
+@media screen and (max-width: 600px) {
+  .serv-type {
+    font-size: 30px;
+  }
+  .S-section {
+    flex-direction: column;
+    padding: 25% 5%;
+  }
 }
 .serv h5{
 	margin: 125% 0%;
