--- a/styles/style.css
+++ b/styles/style.css
@@ -39,20 +39,23 @@ footer{
 	box-sizing: border-box;
 }
 .container{
-	width: 100%;
-	height: 1vh;
-	padding-right: 8%;
-	padding-left: 8%;
-	box-sizing: border-box;
+  width: 100%;
+  height: auto;
+  padding-right: 8%;
+  padding-left: 8%;
+  box-sizing: border-box;
 }
+
 .nav-bar{
-	position: absolute;
-	right:-.1px;
-	height: 12%;
-	display: flex;
-	align-items: center;
-	background-color: black;
-	width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 12%;
+  display: flex;
+  align-items: center;
+  background-color: black;
+  width: 100%;
+  z-index: 999;
 }
 
 .logo{
@@ -533,6 +536,6 @@ td {
 
 @media only screen and (max-width: 600px) {
   .nav-bar {
-    height: 1vh;
+    height: 8vh;
   }
 }
